# mesa-ports

./: .gitignore  .gitmodules  README.md  build_malibu_hidapi_mcp2210_win32.sh  build_malibu_mcp2210_hidapi_win32.sh  build_malibu_mcp2210_hidapi_win32_phy_demo_appl.sh  build_malibu_win32-phy_demo_appl.sh  build_malibu_win32-sanity_checks.sh  malibu_hidapi_mcp2210_win32.c  malibu_mcp2210_hidapi_win32.c
docs/: malibu_mcp2210_hidapi_win32-log_phy_demo_appl.txt  malibu_win32-phy_demo_appl-README.md  malibu_win32-sanity_checks-README.md  mepa_app_sama7-spi_malibu_test_code-log.txt  mepa_app_sama7-spi_malibu_test_code.sal
include/: malibu_win32-sanity_checks.h
malibu_mcp2210_hidapi_win32_docs/: README.md
mepa-app-vsc8258-mcp2210-win32/: CMakeLists.txt  README.md  mcp2210_hidapi_mepa_hal.c  mepa_appl_custom_malibu.c
mepa-app-vsc8258-mcp2210-win32/docs/: app-runtime logs.txt  cmake-generate logs.txt  mingw32-make logs.txt
mepa-app-vsc8258-mcp2210-win32/patches/: vtss_os_win32.h
mepa_app_sama7/: CMakeLists.txt  README.md  dut_key  dut_key.pub  linux_spidev.c  main.c  transfer_to_dut.sh
mepa_app_sama7/include/: my_debug.h
mepa_app_sama7/mepa_app_cable_diag/: README.md  mepa_app_cable_diag.c
mepa_app_sama7/mepa_app_port_linkup/: README.md  aux_func.c  mepa_app_port_linkup.c
mepa_app_sama7/mepa_app_power_modes/: mepa_app_power_modes.c
mepa_app_sama7/mepa_app_sanity_check_standalone_lan884x/: CMakeLists.txt  README.md  linux_mdio.c  mepa_appl_custom_lan884x.c  sama7_mdio.c
mepa_app_sama7/mepa_app_sanity_check_standalone_lan884x/docs/: app_log.txt
mepa_app_sama7/mepa_app_sanity_check_standalone_lan884x/include/: linux_mdio.h  main.h  sama7_mdio.h
mepa_app_sama7/mepa_app_sanity_check_standalone_malibu/: CMakeLists.txt  LICENSE  mepa_appl_custom_malibu.c  mepa_appl_phy_demo_appl_malibu.c  rpi_spi.c  rpi_spi_vtss.c
mepa_app_sama7/mepa_app_simple/: mepa_app_simple.c
mepa_app_sama7/mepa_app_warm_start/: mepa_app_warm_start.c
mepa_app_sama7_malibu/: CMakeLists.txt  README.md  linux_spidev.c  main.c  malibu10_sanity_check_app  mepa_appl_custom_malibu.c  rpi_spi.c  rpi_spi.h  transfer_to_dut.sh
mepa_app_sama7_malibu/include/: linux_spidev.h  main.h  my_debug.h
mepa_app_sama7_malibu/malibu10_sanity_check_app/: CMakeLists.txt  Makefile  README.md  linux_spidev.h  mepa_appl_custom_malibu.c  rpi_spi.c
mepa_app_sama7_malibu/mepa_app_cable_diag/: mepa_app_cable_diag.c
mepa_app_sama7_malibu/mepa_app_port_linkup/: mepa_app_port_linkup.c
mepa_app_sama7_malibu/mepa_app_power_modes/: README.md  mepa_app_power_modes.c
mepa_app_sama7_malibu/mepa_app_sanity_check/: CMakeLists.txt  README.md  mepa_appl_phy_demo_appl_malibu.c  rpi_spi_vtss.c
mepa_app_sama7_malibu/mepa_app_sanity_check/src/: linux_spidev.c  mepa_appl_phy_demo_appl_malibu.c
mepa_app_sama7_malibu/mepa_app_sanity_check_standalone/: CMakeLists.txt  rpi_spi.c
mepa_app_sama7_malibu/mepa_app_simple/: mepa_app_simple.c
mepa_app_sama7_malibu/mepa_app_warm_start/: README.md
src/: malibu_win32-sanity_checks.c
